Add user following

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,6 +4,11 @@
       <section>
         <%= render 'shared/user_info' %>
       </section>
+
+      <section>
+        <%= render 'shared/stats' %>
+      </section>
+
       <section>
         <%= render 'shared/micropost_form' %>
       </section>
@@ -15,12 +20,10 @@
   </div>  
 <% else %>
   <div class="center hero-unit">
-    <h1>Welcome to the Sample App</h1>
+    <h1>Welcome to Sample App</h1>
 
     <h2>
-      This is the home page for the
-      <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-      sample application.
+      This is the home page for the Ruby on Rails Tutorial sample application.
     </h2>
 
     <%= link_to "Sign up now!", signup_path, 
