Remodeled layouts for the College of Technology

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,13 +1,13 @@
 <footer class="footer">
   <small>
-    <a href ="#">Brought to you by:</a>
-    Harvey and Robbie | Proudcloud
+    <p><font color="#000">Brought to you by:</font>
+      Harvey and Robbie | Proudcloud</p>
   </small>
   <nav>
     <ul>
       <li><%= link_to "About", about_path %></li>
       <li><%= link_to "Contact", contact_path %></li>
-      <li><a href="http://news.railstutorial.org/">News</a></li>
+      <li><%= link_to "News", news_path %></li>
     </ul>
   </nav>
 </footer>
