--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,8 +1,34 @@
 <% provide(:title, 'About Us') %>
 <h1>About Us</h1>
-<p>
-  The <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-  is a project to make a book and screencasts to teach web development
-  with <a href="http://rubyonrails.org/">Ruby on Rails</a>. This
-  is the sample application for the tutorial.
+<div class="hero-unit">
+<p class="lead" align="center">
+  The <font color="#cc0000"><b>College of Technology</b></font> (formerly the PUP Technical School and Technical and Entrepreneurial Skills Development Center) is the University's 17th college. The College offers six diploma programs with three-year ladderized curriculum, which focuses on the integration of technology and management in the skills development of its students.</p>
+</div>
+
+<p>The change of TESDC (Technical and Entrepreneurial Skills Development Center, former Technical School) to College of Technology reinforces the essence of the Polytechnic University of the Philippines as a polytechnic university.</p>
+<br/>
+
+<p>The College of Technology, with its new buildings structured to house laboratories and top-of-the-range facilities, will concentrate on the "hands-on" approach to learning; hence, in keeping with the new name, six three-year ladderized programs of study have been crafted: <br/> <br/>
+  <ol type="1">
+    <li class="alert">(ICMT) Information Communication Management Technology</li>
+    <li class="alert">(CEMT) Computer Engineering Management Technology</li>
+    <li class="alert">(OMT) Office Management Technology</li>
+    <li class="alert">(EEMT) Electrical Engineering Management Technology</li>
+    <li class="alert">(MEMT) Mechanical Engineering Management Technology</li>
+    <li class="alert">(ECEMT) Electronics Communications Engineering Management Technology.</li>
+  </ol>
 </p>
+<br />
+<p>The three-year, applications-oriented programs of study integrating technology and management are ladderized.  A completion of academic requirements for each curricular year during the three - year period leads to instant jobs here and abroad; thus, the incidence of unemployed out-of-school youth will be decreased if not altogether avoided.  At the end of the first curricular year, a certificate is awarded; after the second year, an associate degree; and after the third year, the diploma course.  A student may finish the course for three years straight, or he may temporarily leave school after a year of schooling to earn some money for the next year level.</p>
+<br/>
+
+<p>The ladderized courses (that emphasize the development of English communication skills as well) are perfect for students who plan to work as OFWs.  The courses will provide them with needed globalized skills before they begin working abroad.  The marketable skills they gain from the formal training will give them an assurance of a career, of finding good work even when they return to the Philippines after their foreign employment.  This will help solve the unemployment problem of returning OFWs. </p>
+<br/>
+
+<p>Reports claim that many OFWs leave the Philippines before finishing their formal education, and whatever skills they have when they come back to their home country are skills they learn while working abroad.  In most cases, these skills have no market here so that the returning OFWs end up without any career, and they struggle to find a suitable job.  Taking one of the ladderized courses, therefore, is the answer to their problem.</p>
+<br/>
+
+<p>To ensure that both style and substance of the new course offerings would be in keeping with the vision of the College and the changing needs of national and international employment providers, utmost care was done in the preparation of the curricula: (1) present-day curricula of local and foreign schools were consulted, (2) subject offerings were examined vis-à-vis target jobs, and (3) drafted curricula were assessed by experts in both the academe and industry.</p>
+<br/>
+
+<p><small><i> Source: <a href="http://www.pup.edu.ph/ct/"> http://www.pup.edu.ph/ct/</a></i></small></p>
