--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,6 +1,25 @@
 <% provide(:title, 'Contact') %>
 <h1>Contact</h1>
-<p>
-  Contact Ruby on Rails Tutorial about the sample app at the
-  <a href="http://railstutorial.org/contact">contact page</a>.
-</p>
+
+<div class="alert alert-info">
+      <h3>College of Technology</h3>
+</div>  
+
+  <div class="thumbnail">
+      <b>E-mail:</b><span class="muted"> ct@pup.edu.ph</span>
+    </div>
+
+    <div class="thumbnail">
+      <b>Postal Mail:</b>
+        <div class="container">
+          <span class="muted">College of Technology<br/>
+        NDC Campus, Pureza St., Sta. Mesa, Manila<br/>
+        Philippines 01008<br/></div>
+    </div>
+
+      <div class="thumbnail">
+        <b>Telephone:</b><span class="muted"> (632) 716-9284 </span>
+    </div>
+
+<hr>
+<small><span class="muted">Long-distance fees (international and local rates) may be charged by your local telephone service provider if you are calling outside Metro Manila.</span></small>
