--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -19,16 +19,47 @@
     </div>
   </div>  
 <% else %>
+
+    <center>
+      <%= link_to image_tag("ct.jpg", alt: "College of Technology", width: "86", height: "86"), 'http://www.facebook.com/groups/theofficialpupct/', :target => '_blank' %>
+      
+      <%= link_to image_tag("pup.png", alt: "Polytechnic University of the Philippines", width: "80", height: "80"), 'http://www.pup.edu.ph', :target => '_blank' %>
+      <p></p>
+
+      <%#<h3><font color="#cc0000" size="5em"> College of Technology</font></h3> %>
+  </center>
+
   <div class="center hero-unit">
-    <h1>Welcome to Sample App</h1>
+    <h1>Welcome to CTZEN <h1>
 
     <h2>
-      This is the home page for the Ruby on Rails Tutorial sample application.
+      This web application is made for PUP College of Technology Students
     </h2>
 
-    <%= link_to "Sign up now!", signup_path, 
-                                class: "btn btn-large btn-primary" %>
+    <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
   </div>
 
-  <%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
+ <ul class="thumbnails">
+    <li class="span4">
+    <div class="thumbnail">
+      <img src="http://placehold.it/300x200" alt="featured_1">
+      <h3>Featured Professor name here</h3>
+      <p>Here we can put a simple bio of the featured professor.</p>
+    </div>
+  </li>
+  <li class="span4">
+    <div class="thumbnail">
+      <img src="http://placehold.it/300x200" alt="featured_2">
+      <h3>Featured Student name here</h3>
+      <p>Here we can put a simple bio of the featured student.</p>
+    </div>
+  </li>
+  <li class="span4">
+    <div class="thumbnail">
+      <img src="http://placehold.it/300x200" alt="featured_3">
+      <h3>Featured section name here</h3>
+      <p>Here we can put a simple bio or latest achievement of that particular section.</p>
+    </div>
+  </li>
+</ul>
 <% end %> 
