Added notice information

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -26,7 +26,6 @@
       <%= link_to image_tag("pup.png", alt: "Polytechnic University of the Philippines", width: "80", height: "80"), 'http://www.pup.edu.ph', :target => '_blank' %>
       <p></p>
 
-      <%#<h3><font color="#cc0000" size="5em"> College of Technology</font></h3> %>
   </center>
 
   <div class="center hero-unit">
@@ -38,7 +37,9 @@
 
     <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
   </div>
-
+  <div class="alert alert-error">
+    <p class="lead"> Thank you for those who support CTzen application. We are working hard to make this app functional, and please continue supporting us. We are open for any suggestions while this app is on its BETA version. Thank You! Be proud CTzens! :) </p>
+  </div>
  <ul class="thumbnails">
     <li class="span4">
     <div class="thumbnail">
