--- a/app/views/static_pages/news.html.erb
+++ b/app/views/static_pages/news.html.erb
@@ -1,6 +1,10 @@
 <center>
   <h1>News</h1>
 </center>
+ <div class="alert alert-error">
+ <p class="lead"> Thank you for those who support CTzen application. We are working hard to make this app functional, and please continue supporting us. We are open for any suggestions while this app is on its BETA version. Thank You! Be proud CTzens! :) </p>
+  </div>
+
 <div id="myCarousel" class="carousel slide">
   <!-- Carousel items -->
   <div class="carousel-inner">
