--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="footer">
   <small>
     <p><font color="#000">Brought to you by:</font>
-      Harvey and Robbie | Proudcloud</p>
+      Harvey and Robbie</p>
   </small>
   <nav>
     <ul>
