Added notice information

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -38,7 +38,9 @@
     <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
   </div>
   <div class="alert alert-error">
-    <p class="lead"> Thank you for those who support CTzen application. We are working hard to make this app functional, and please continue supporting us. We are open for any suggestions while this app is on its BETA version. Thank You! Be proud CTzens! :) </p>
+    <center>
+      <p class="lead"> Thank you for those who support CTzen application. We are working hard to make this app functional, and please continue supporting us. We are open for any suggestions while this app is on its BETA version. Thank You! Be proud CTzens! :) </p>
+    </center>
   </div>
  <ul class="thumbnails">
     <li class="span4">
