Added working direct messages feature

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,8 @@
 <% provide(:title, 'All users') %>
-<h1>All users</h1>
-
+<hr class="alert">
+<h1><font color="maroon">The College of Technology Community</font></h1>
+<p class="muted" align="center">Showing all the CTzen users</p>
+<hr class="alert">
 <%= will_paginate %>
 
 <ul class="users">
