--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,9 +5,18 @@
       <nav>
         <ul class="nav pull-right">
           <li><%= link_to "Home", root_path %></li>
-          <li><%= link_to "Help", help_path %></li>
           <% if signed_in? %>
-            <li><%= link_to "Users", users_path %></li>
+            <li><%= link_to "CTZENS", users_path %></li>
+            <li id="fat-menu" class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                Direct Messages <b class="caret"></b>
+              </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to 'Received Messages', received_direct_messages_path %></li>
+              <li><%= link_to 'Sent Messages', sent_direct_messages_path %></li>
+              <li class="divider"></li>
+              <li><%= link_to 'Help', help_path %></li>
+            </ul>
             <li id="fat-menu" class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 Account <b class="caret"></b>
@@ -15,10 +24,12 @@
               <ul class="dropdown-menu">
                 <li><%= link_to "Profile", current_user %></li>
                 <li><%= link_to "Settings", edit_user_path(current_user) %></li>
+                <li><%= link_to 'Help', help_path %></li>
                 <li class="divider"></li>
                 <li>
                   <%= link_to "Sign out", signout_path, method: "delete" %>
                 </li>
+
               </ul>
             </li>
           <% else %>
