--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -7,6 +7,8 @@
 <span>
   <%= link_to "view my profile", current_user %>
 </span>
-<span>
-  <%= pluralize(current_user.microposts.count, "micropost") %>
-</span>
+<span><%= current_user.email %><span>
+    <br/>
+    <span>
+      <%= pluralize(current_user.microposts.count, "micropost") %>
+    </span>
