Added Direct messages and remodel navigation bar

--- a/app/views/direct_messages/received.html.erb
+++ b/app/views/direct_messages/received.html.erb
@@ -1,10 +1,13 @@
 <h1 class="hero-unit"> Received Messages </h1>
 <ul class="users">
-<% @direct_messages.each do |dm| %>
+  <% @direct_messages.each do |dm| %>
   <li>
     <%= link_to gravatar_for(dm.sender), dm.sender %>
     <%= link_to dm.sender.name, dm.sender %>:
     <%= dm.content %>
+    <div class ="timestamp">
+    Received <%= time_ago_in_words(dm.created_at) %> ago.
+    </div>
     </li>
   <% end %>
 </ul>
