--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -2,8 +2,11 @@
 <h1>Help</h1>
 <div class="container">
   <center>
-    <div class="hero-unit">
-      <h2> Sorry, our Engineers are still constructing this page. Try come back tomorrow. </h2>
-        </div>
-     </center>
+    <div class="well">
+      <h1> Direct Messages Feature </h1>
+      <p class="lead"> How to send a direct message to your followers or followed ctzens? </p>
+      <p> In the "Compose a Micropost" text area, the proper syntax is this: <span class="text-info"> [dm] [username] [message]  </span></p>
+      <p> <span class="text-success"> Example: </span> dm rbmrclo This is the proper way to send a direct message. </p>
+      <p> You can see your messages at the direct messages page. Thank You! </p>
+  </center>
 </div>
