--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,14 +7,19 @@
         <%= @user.name %>
       </h1>
       <%= @user.email %>
+      <p>
+        <font color="#0099ff">@<%= @user.username %></font>
+      </p>
     </section>
     <section>
-      <%= render 'shared/stats' %>
-    </section>
+         <%= render 'shared/stats' %>
+       </section>
+       <section>
+         <%= render 'follow_form' if signed_in? %>
+       </section>
   </aside>
   <div class="span8">
-    <%= render 'follow_form' if signed_in? %>
-    <% if @user.microposts.any? %>
+     <% if @user.microposts.any? %>
       <h3>Microposts (<%= @user.microposts.count %>)</h3>
       <ol class="microposts">
         <%= render @microposts %>
