--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -3,6 +3,9 @@
     <%= form_for(@user) do |f| %>
       <%= render 'shared/error_messages', object: f.object %>
 
+      <%= f.label :username %>
+      <%= f.text_field :username %>
+      
       <%= f.label :name %>
       <%= f.text_field :name %>
 
