--- a/app/views/shared/_stats.html.erb
+++ b/app/views/shared/_stats.html.erb
@@ -3,9 +3,9 @@
 
   <a href="<%= user_path(@user) %>">
     <strong class="stat">
-      <%= current_user.microposts.count %>
+      <%= @user.microposts.count %>
     </strong>
-      <% if current_user.microposts.count == 0 %>
+      <% if @user.microposts.count == 0 %>
         <%= "Micropost" %>
       <% else %>
         <%= "Microposts" %>
