--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,11 +20,15 @@
   </aside>
   <div class="span8">
      <% if @user.microposts.any? %>
-      <h3>Microposts (<%= @user.microposts.count %>)</h3>
-      <ol class="microposts">
-        <%= render @microposts %>
-      </ol>
-      <%= will_paginate @microposts %>
+       <h3>Microposts (<%= @user.microposts.count %>)</h3>
+       <ul class="microposts">
+      <% @replies.each do |f| %>
+        <li> <%= gravatar_for(f.user) %>
+          <% @post_replies = Micropost.find(f.micropost_id) %>   
+          <%= render @post_replies %>
+        </li>
+      <% end %>
+    </ul>
     <% end %>
   </div>
 </div>
