Adds notice for ongoing construction

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -39,7 +39,8 @@
   </div>
   <div class="alert alert-error">
     <center>
-      <p class="lead"> Thank you for those who support CTzen application. We are working hard to make this app functional, and please continue supporting us. We are open for any suggestions while this app is on its BETA version. Thank You! Be proud CTzens! :) </p>
+      <p class="lead"> <p class="lead"> There's an ongoing AWESOME reconstruction in this site. And because we love all the CT peeps, we want to give you the best functionality for the CTzen App. We will update you as soon as we're done with the finish product of this site. Thank you for all your support! Your wait will be all worth it :) </p>
+</p>
     </center>
   </div>
  <ul class="thumbnails">
