Fixes Static Pages for Demo

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -20,30 +20,12 @@
   </div>  
 <% else %>
 
-    <center>
-      <%= link_to image_tag("ct.jpg", alt: "College of Technology", width: "86", height: "86"), 'http://www.facebook.com/groups/theofficialpupct/', :target => '_blank' %>
-      
-      <%= link_to image_tag("pup.png", alt: "Polytechnic University of the Philippines", width: "80", height: "80"), 'http://www.pup.edu.ph', :target => '_blank' %>
-      <p></p>
-
-  </center>
-
   <div class="center hero-unit">
-    <h1>Welcome to CTZEN <h1>
-
-    <h2>
-      This web application is made for PUP College of Technology Students
-    </h2>
+    <h1>Welcome to Twitter!<h1>
 
     <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
-  </div>
-  <div class="alert alert-error">
-    <center>
-      <p class="lead"> <p class="lead"> There's an ongoing AWESOME reconstruction in this site. And because we love all the CT peeps, we want to give you the best functionality for the CTzen App. We will update you as soon as we're done with the finish product of this site. Thank you for all your support! Your wait will be all worth it :) </p>
-</p>
-    </center>
-  </div>
- <ul class="thumbnails">
+  </div> 
+    <ul class="thumbnails">
     <li class="span4">
     <div class="thumbnail">
       <img src="http://placehold.it/300x200" alt="featured_1">
