--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,6 @@
 <% provide(:title, 'All users') %>
 <hr class="alert">
-<h1><font color="maroon">The College of Technology Community</font></h1>
-<p class="muted" align="center">Showing all the CTzen users</p>
+<h1><font color="maroon">The Twitter Community</font></h1>
 <hr class="alert">
 <%= will_paginate %>
 
