--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,19 +1,9 @@
 <footer class="footer">
   <small>
-    <p><font color="#000">Brought to you by:</font>
-      Harvey and Robbie</p>
+    <%= "Demo App" %>
   </small>
   <nav>
-    <ul>
-      <li><%= link_to "About", about_path %></li>
-      <li><%= link_to "News", news_path %></li>
-      <li><%= link_to "Help", help_path %></li>
-      <li><%= link_to "Contact", contact_path %></li>
-    </ul>
   </nav>
   <br/>
   <br/>
-  <div class="center container">
-    <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-nd/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/3.0/">Creative Commons Attribution-NonCommercial-NoDerivs 3.0 Unported License</a>.
-  </div>
 </footer>
